[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tres_folder/regular_fonts.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/images/logos/callbreak_logo.webp" type="Texture" id=3]
[ext_resource path="res://src/scripts/components/minicomponents/fifth_page/achieve_date.gd" type="Script" id=4]
[ext_resource path="res://assets/images/shape/triangle-512.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 430, 288 )
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 400.0
margin_bottom = 258.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 48.0
margin_top = 33.0
margin_right = 322.0
margin_bottom = 194.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 274.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="DateLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 274.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0.729412, 0.0313726, 0.972549, 1 )
custom_fonts/font = SubResource( 2 )
text = "2014/11/02"
align = 1
valign = 1

[node name="AchieveLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 274.0
margin_bottom = 161.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Released Callbreak Multiplayer 0.0.1"
align = 1
valign = 1

[node name="RightTriangle" type="TextureRect" parent="Panel"]
margin_left = 402.0
margin_top = 20.0
margin_right = 442.0
margin_bottom = 60.0
rect_rotation = 90.0
texture = ExtResource( 5 )
expand = true

[node name="LeftTriangle" type="TextureRect" parent="Panel"]
margin_left = -32.0
margin_top = 60.0
margin_right = 8.0
margin_bottom = 100.0
rect_rotation = 270.0
texture = ExtResource( 5 )
expand = true
